{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 20,
  "lineage": "70dba3ac-d124-7901-73b1-593619288029",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_health_checks",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-06T17:50:29.663-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/spark-demo-266309/global/firewalls/allow-health-checks",
            "name": "allow-health-checks",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/networks/private-network",
            "priority": 1000,
            "project": "spark-demo-266309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/firewalls/allow-health-checks",
            "source_ranges": [
              "130.211.0.0/22",
              "35.191.0.0/16"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "allow-health-checks"
            ],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.private_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_tcp_forwarding",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-04T03:14:58.230-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/spark-demo-266309/global/firewalls/allow-iap-tcp-forwarding",
            "name": "allow-iap-tcp-forwarding",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/networks/private-network",
            "priority": 1000,
            "project": "spark-demo-266309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/firewalls/allow-iap-tcp-forwarding",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.private_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-01-31T23:22:25.139-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/spark-demo-266309/global/firewalls/allow-internal",
            "name": "allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/networks/private-network",
            "priority": 1000,
            "project": "spark-demo-266309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/firewalls/allow-internal",
            "source_ranges": [
              "10.2.0.0/16",
              "192.168.10.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.private_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_rdp",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3389"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-02-01T01:57:01.556-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/spark-demo-266309/global/firewalls/allow-rdp",
            "name": "allow-rdp",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/networks/private-network",
            "priority": 1000,
            "project": "spark-demo-266309",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/firewalls/allow-rdp",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "dependencies": [
            "google_compute_network.private_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "private_network",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/spark-demo-266309/global/networks/private-network",
            "name": "private-network",
            "project": "spark-demo-266309",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/networks/private-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "regional_subnet",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-01-31T21:01:32.156-08:00",
            "gateway_address": "10.2.0.1",
            "id": "projects/spark-demo-266309/regions/australia-southeast1/subnetworks/regional-subnet",
            "ip_cidr_range": "10.2.0.0/16",
            "name": "regional-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/global/networks/private-network",
            "private_ip_google_access": true,
            "project": "spark-demo-266309",
            "region": "australia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "192.168.10.0/24",
                "range_name": "secondary-range"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/spark-demo-266309/regions/australia-southeast1/subnetworks/regional-subnet"
          },
          "dependencies": [
            "google_compute_network.private_network"
          ]
        }
      ]
    }
  ]
}